finish html parser (course 1-5)

--- a/week03/index.html
+++ b/week03/index.html
@@ -1,11 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
+<html lang="en"id="box">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Html Document</title>
 </head>
 <body>
-   TEST HTML DOCUMENT 
+   <div>
+      <img id="myid" src="" alt=""/>
+      <img /> 
+   </div>
 </body>
 </html>
