finish html dom construction

--- a/week03/index.html
+++ b/week03/index.html
@@ -1,13 +1,29 @@
 <html lang="en"id="box">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Html Document</title>
+   <style>
+      body {
+         height: 100%;
+      }
+      img {
+         width: 30px;
+         background-color: #ff5000;
+      }
+      p {
+         margin-bottom: 20px;
+         font-size: 16px;
+      }
+      span {
+         color: brown;
+         font-size: 14px;
+      }
+   </style>
+   <title>Html Document</title>
 </head>
 <body>
    <div>
-      <img id="myid" src="" alt=""/>
-      <img /> 
+      <p id=title>Paragraph</p>
+      <img src="" alt="" />
+      <span class="txt">Text <i>litral</i></span>
    </div>
 </body>
 </html>
