finished css computing lessons 11-12

--- a/week03/index.html
+++ b/week03/index.html
@@ -1,18 +1,14 @@
 <html lang="en"id="box">
 <head>
    <style>
-      body {
-         height: 100%;
-      }
-      img {
-         width: 30px;
-         background-color: #ff5000;
-      }
-      p {
+      div p {
          margin-bottom: 20px;
          font-size: 16px;
       }
-      span {
+      div i {
+         font-weight: 500;
+      }
+      div .abc, div .txt {
          color: brown;
          font-size: 14px;
       }
@@ -23,6 +19,7 @@
    <div>
       <p id=title>Paragraph</p>
       <img src="" alt="" />
+      <span class="abc">ABC Company</span>
       <span class="txt">Text <i>litral</i></span>
    </div>
 </body>
