--- a/week03/index.html
+++ b/week03/index.html
@@ -1,6 +1,10 @@
 <html lang="en"id="box">
 <head>
    <style>
+      body img {
+         width: 100px;
+         background-color: #ccc;
+      }
       div i {
          font-weight: 500;
       }
