--- a/week03/index.html
+++ b/week03/index.html
@@ -1,16 +1,9 @@
 <html lang="en"id="box">
 <head>
    <style>
-      body img {
-         width: 100px;
-         background-color: #ccc;
-      }
-      div i {
-         font-weight: 500;
-      }
-      div .abc, div .txt {
-         color: brown;
-         font-size: 14px;
+      span.abc {
+         color: blueviolet;
+         font-size: 15px;
       }
    </style>
    <title>Html Document</title>
