--- a/week04/index.html
+++ b/week04/index.html
@@ -5,24 +5,16 @@
          width: 500px;
          height: 300px;
          display: flex;
+         background-color: rgb(255,255,255);
       }
       #container #myid {
          width: 200px;
+         height: 100px;
+         background-color: rgb(255,0,0);
       }
       #container .c1 {
          flex: 1;
-      }
-      .large {
-         width: 500px;
-         display: flex;
-      }
-      .large .bigger {
-         width: 600px;
-         height: 100px;
-      }
-      .large .left, .large .right {
-         width: 300px;
-         height: 220px;
+         background-color: rgb(0,255,0);
       }
    </style>
    <title>Html Document</title>
@@ -31,11 +23,6 @@
    <div id="container">
       <div id="myid"></div>
       <div class="c1"></div>
-   </div>
-   <div class="large">
-      <div class="bigger"></div>
-      <div class="left"></div>
-      <div class="right"></div>
    </div>
 </body>
 </html>
