--- a/week05/index.html
+++ b/week05/index.html
@@ -21,9 +21,9 @@
 	</div>
 	<script src="./match.js"></script>
 	<script>
-		let element = document.getElementById('a');
-		let selector = "p[data-right]";
-		console.log(simpleMatch(selector, element));
+		let element = document.getElementById('2');
+		let selector = "#b>#a>div>p";
+		console.log(onChild(selector, element));
 	</script>
 </body>
 </html>
