--- a/week05/index.html
+++ b/week05/index.html
@@ -21,8 +21,8 @@
 	</div>
 	<script src="./match.js"></script>
 	<script>
-		let element = document.getElementById('last');
-		let selector = "#span+div";
+		let element = document.getElementById('2');
+		let selector = "#a span+ .red";
 		console.log(match(selector, element));
 	</script>
 </body>
