--- a/week09/index.html
+++ b/week09/index.html
@@ -26,6 +26,12 @@
   <button onclick="localStorage.setItem('map', JSON.stringify(map))">Save</button>
 
   <script>
+    function sleep(t) {
+      return new Promise(function(resolve) {
+        setTimeout(resolve, t)
+      })
+    }
+
     let map = localStorage.getItem("map") ? JSON.parse(localStorage.getItem("map")) : Array(10000).fill(0);
     let container = document.getElementById('container');
     for (let y = 0; y < 100; y++) {
@@ -60,7 +66,88 @@
       clear = (e.which === 3);
     })
     document.addEventListener("mouseup", () => mousedown = false);
-    document.addEventListener("contextmenu", e => e.preventDefault())
+    // document.addEventListener("contextmenu", e => e.preventDefault())
+
+    async function findPath(map, start, end) {
+      let queue = new Sorted([start], (a, b) => distanceEnd(a) - distanceEnd(b));
+      let table = Object.create(map);
+
+      function distanceEnd(point) {
+        return Math.pow(point[0] - end[0], 2) + Math.pow(point[1] - end[1], 2)
+      }
+
+      function distanceStart(point) {
+        return Math.pow(point[0] - start[0], 2) + Math.pow(point[1] - start[1], 2)
+      }
+
+      async function insert(x, y, pre) {
+        if (x < 0 || x >= 100 || y < 0 || y >= 100) {
+          return 
+        }
+        if (table[100 * y + x]) {
+          return
+        }
+        await sleep(10);
+        container.children[y * 100 + x].style.backgroundColor = 'lightgreen';
+        table[100 * y + x] = pre;
+        queue.give([x, y]);
+      }
+      
+      while(queue.data.length) {
+        // 改成pop就是深度优先搜索
+        let [x, y] = queue.take();
+        if (x === end[0] && y === end[1]) {
+          // console.log(table, 'table')
+          let path = [];
+          while (x !== start[0] || y !== start[1]) {
+            // console.log(map[100 * y + x], 'map[100 * y + x]')
+            path.push(table[100 * y + x]);
+            [x, y] = table[y * 100 + x];
+            container.children[y * 100 + x].style.backgroundColor = "purple";
+          }
+          // console.log(path, "path")
+          return path;
+        }
+        await insert(x - 1, y, [x, y])
+        await insert(x, y - 1, [x, y])
+        await insert(x + 1, y, [x, y])
+        await insert(x, y + 1, [x, y])
+
+        await insert(x - 1, y - 1, [x, y])
+        await insert(x + 1, y - 1, [x, y])
+        await insert(x + 1, y + 1, [x, y])
+        await insert(x - 1, y + 1, [x, y])
+      }
+      return null;
+    }
+
+    // take的时候总是拿出来最小的，give的时候不管
+    class Sorted {
+      constructor(data, compare){
+        this.data = data.slice();
+        this.compare = compare || ((a, b) => a - b)
+      }
+      take() {
+        if (!this.data.length) return;
+        let min = this.data[0];
+        let minIndex = 0;
+
+        for (let i = 0; i < this.data.length; i++) {
+          if (this.compare(this.data[i], min) < 0) {
+            min = this.data[i];
+            minIndex = i;
+          }
+        }
+        // 最小值已经保存， 把最后一位写入最小值的位置，然后再删除最后一位
+        this.data[minIndex] = this.data[this.data.length -1];
+        this.data.pop();
+        return min;
+      }
+      give(v) {
+        this.data.push(v);
+      }
+    }
+
   </script>
 </body>
 </html>
