--- a/week10/index.html
+++ b/week10/index.html
@@ -32,16 +32,69 @@
 		}
 	}
 
-	for (let token of tokenize("1024 + 10 * 25")) {
-		console.log(token);
+	let source = [];
+
+	for (let token of tokenize("1 + 2 + 3")) {
+		if (token.type !== "Whitespace" && token.type !== "LineTerminator") {
+			source.push(token);
+		}
 	}
 
 	function Expression(tokens) {
-
+		if (source[0].type === "AdditiveExpression" && source[1] && source[1].type === "EOF") {
+			let node = {
+				type: "Expression",
+				children: [source.shift(), source.shift()],
+			}
+			source.unshift(node);
+			return node;
+		}
+		AdditiveExpression(source);
+		return Expression(source)
 	}
 
 	function AdditiveExpression(source) {
-
+		if (source[0].type === "MultiplicativeExpression") {
+			let node = {
+				type: "AdditiveExpression",
+				children: source[0]
+			}
+			source[0] = node;
+			return AdditiveExpression(source)
+		}
+		if (source[0].type === "AdditiveExpression" && source[1] && source[1].type === "+") {
+			let node = {
+				type: "AdditiveExpression",
+				operator: "+",
+				children: []
+			}
+			node.children.push(source.shift());
+			node.children.push(source.shift());
+			// EOF
+			MultiplicativeExpression(source);
+			node.children.push(source.shift());
+			source.unshift(node);
+			return AdditiveExpression(source);
+		}
+		if (source[0].type === "AdditiveExpression" && source[1] && source[1].type === "-") {
+			let node = {
+				type: "AdditiveExpression",
+				operator: "-",
+				children: []
+			}
+			node.children.push(source.shift());
+			node.children.push(source.shift());
+			// 跟<AdditiveExpression><+><MultiplicativeExpression>相匹配
+			MultiplicativeExpression(source);
+			node.children.push(source.shift());
+			source.unshift(node);
+			return AdditiveExpression(source);
+		}
+		if (source[0].type === "AdditiveExpression") {
+			return source[0];
+		}
+		MultiplicativeExpression(source);
+		return AdditiveExpression(source);
 	}
 
 	function MultiplicativeExpression(source) {
@@ -78,7 +131,14 @@
 			source.unshift(node);
 			return MultiplicativeExpression(source);
 		}
+		if (source[0].type === "MultiplicativeExpression") {
+			return source[0];
+		}
+		// 永远都不会执行
+		return MultiplicativeExpression(source)
 	}
+
+	AdditiveExpression(source);
 
 
 </script>
